catch NullPointerException on project creation