@@ -6,6 +6,7 @@ import lombok.Value;
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 @Value
 @Builder
@@ -19,17 +20,18 @@ public class Project {
     Boolean isExternal;
     List<String> sites;
 
-    public Project(Long projectId, String title, String description, LocalDate since, LocalDate until, Boolean isExternal, List<String> sites) {
+    public Project(Long projectId, String title, String description, LocalDate since, LocalDate until,
+                   Boolean isExternal, List<String> sites) {
         this.projectId = projectId;
         this.title = title;
         this.description = description;
         this.since = since;
         this.until = until;
         this.isExternal = isExternal;
-        this.sites = List.copyOf(sites);
-    }
-
-    public List<String> getSites() {
-        return Collections.unmodifiableList(sites);
+        if (Objects.nonNull(sites)) {
+            this.sites = Collections.unmodifiableList(List.copyOf(sites));
+        } else {
+            this.sites = null;
+        }
     }
 }
